# cmockalearn

./: .gitignore  README.md
examplecode/: CMakeLists.txt
examplecode/src/: CMakeLists.txt
hdf5/: CMakeLists.txt
hdf5/src/: CMakeLists.txt  basic_hdf5_ex.c
hdf5/test/: CMakeLists.txt  main.c  test_initialize_hdf5.c
isinglib/: CMakeLists.txt
isinglib/src/: CMakeLists.txt
isinglib/src/include/: ising_main.h
isinglib/test/: CMakeLists.txt  main.c  test_initialize.c
myapp/mylibrary/: CMakeLists.txt
myapp/mylibrary/src/: CMakeLists.txt  myapp.c  myapp.h  myapp_test.c  stencil_2d_function.c
robbins/: CMakeLists.txt  README.md
robbins/cmake/: test.cmake
robbins/src/: CMakeLists.txt  listlib.c  listlib.h  showtimes.c
robbins/test/: listuser_test_wrap.h  main.c  test_accessdata.c  test_adddata.c  test_showhistory.c
unixio/: CMakeLists.txt  README.md
unixio/src/: CMakeLists.txt  iolib.c  iolib.h  ising_parameters.h
unixio/test/: CMakeLists.txt  main.c  test_initialize.c  test_initialize_hdf5.c  test_iolib.c
